--- a/people.html
+++ b/people.html
@@ -246,14 +246,15 @@
                   Previous staff members
                 </h5>
                 <p class="text-black-50 mb-3">
-                  <a href="https://ulrikaklomp.com" target="_blank">Ulrika Klomp</a> (2023-2025)<br>
-                  Ellen Nauta (2023-2025)<br>
-                  Ray Pelupessy (2023-2024)<br>
-                  <a href="https://olineranum.github.io/" target="_blank">Oline Ranum</a> (2024-2025)<br>
-                  <a href="https://sites.google.com/view/raquelveigabusto" target="_blank">Raquel Veiga Busto</a> (2022-2025)<br>
-                  Dalene Venter (2023-2025) <br>
-                  Casper Wubbolts (2023-2025) <br>
-                  Johan Ros (2024-2025) <br>
+                  Marijke Scheffener (Lecturer NGT, retired in 2025)<br>
+                  <a href="https://ulrikaklomp.com" target="_blank">Ulrika Klomp</a> (Postdoc, 2023-2025)<br>
+                  Ellen Nauta (Researcher, 2023-2025)<br>
+                  Ray Pelupessy (Lab manager, 2023-2024)<br>
+                  <a href="https://olineranum.github.io/" target="_blank">Oline Ranum</a> (Researcher, 2024-2025)<br>
+                  <a href="https://sites.google.com/view/raquelveigabusto" target="_blank">Raquel Veiga Busto</a> (Postdoc,2022-2025)<br>
+                  Dalene Venter (Researcher, 2023-2025) <br>
+                  Casper Wubbolts (Researcher, 2023-2025) <br>
+                  Johan Ros (Researcher, 2024-2025) <br>
                 </p>
               </div>
             </div>
