--- a/index.html
+++ b/index.html
@@ -60,6 +60,13 @@
               </p>
             </div>
 
+            <!-- Banner -->
+            <div class="project-text text-left pt-4 pb-2 bg-warning border rounded">
+              <p>
+                We're looking for a new colleague! Click on <b><a href="https://www.signlab-amsterdam.nl/evenementen.html">this link</a></b> to view the vacancy for "Research assistant in Designing an AR Remote Sign Language Interpreting Service".
+              </p>
+            </div>
+
             <!-- Title -->
             <div class="row align-items-start mb-1">
               <div class="col-12 col-md order-2">
