--- a/people.html
+++ b/people.html
@@ -174,6 +174,9 @@
                   Zhengdan Xia (MSc Information Studies)<br>
                   Amina Izbassar (MSc AI)<br>
                   Mabel Traube (BSc AI)<br>
+                  Max Arvilommi (BA Linguistics)<br>
+                  Sigrid Bruinsma (BA Cognition, Language & Communication)<br>
+                  Marnix Croonen (BA Linguistics)<br>
                 </p>
                 <p class="text-black-50 mb-1">
                   <b>2024</b><br>
