--- a/people.html
+++ b/people.html
@@ -177,6 +177,7 @@
                   Max Arvilommi (BA Linguistics)<br>
                   Sigrid Bruinsma (BA Cognition, Language & Communication)<br>
                   Marnix Croonen (BA Linguistics)<br>
+                  Amaury Morizot (BA Linguistics)<br>
                 </p>
                 <p class="text-black-50 mb-1">
                   <b>2024</b><br>
