--- a/research-applications.html
+++ b/research-applications.html
@@ -112,10 +112,13 @@
                     to them, which in turn negatively affects linguistic and cognitive development as well as mental 
                     well-being throughout the lifespan. 
                     Therefore, it is very important to support <strong>parents of deaf children</strong> in learning sign language.
-                    Together with <a href="https://auris.nl/">AURIS</a>, an 
+                    Together with <a href="https://www.tyd.nl/" target="_blank">TYD</a>, a deaf-led organisation providing online and in-person sign language course,
+                    and <a href="https://auris.nl/">AURIS</a>, an 
                     organisation which provides education for deaf children and support-programmes for their families, 
-                    we are currently developing an <a href="https://zin-in-ngt.nl/">app</a> to support parents in learning NGT. 
-
+                    we are currently developing the <a href="https://www.tyd.nl/abonnement" target="_blank">SIGNIO app</a> to support
+                    sign language learners, in particular parents of deaf and hard-of-hearing children.
+                  </p>
+                  <p> 
                     In addition, for the platform 
                     <a href="https://www.gebarentaalvooronzekinderen.nl/" target="_blank">www.gebarentaalvooronzekinderen.nl</a>. 
                     we have made a compilation of scientific work that provides crucial information about language choices, 
