--- a/research-applications.html
+++ b/research-applications.html
@@ -140,7 +140,7 @@
               <!-- Column for picture -->
               <div class="col-12 col-md-5 order-1 order-md-12 avatarGIF ml-md-5">
                 <div class="mb-5">
-                  <a href="https://zin-in-ngt.nl/" target="_blank"><img src="/images/zin-in-ngt.png" class="img-fluid" alt="Screenshots from the application."></a>
+                  <!-- <a href="https://zin-in-ngt.nl/" target="_blank"><img src="/images/zin-in-ngt.png" class="img-fluid" alt="Screenshots from the application."></a> -->
                   <a href="https://www.tyd.nl/abonnement" target="_blank"><img src="/images/signio-download.jpg" class="img-fluid" alt="Poster for downloading the Signio app."></a>
                 </div>
               </div>
