SignBeach to projects

--- a/research-projects.html
+++ b/research-projects.html
@@ -70,6 +70,38 @@
               <!-- Column for project 1 -->
               <div class="col-12 col-md order-1">
                 <div class="project-text pb-1 w-100 text-left textDIV">
+                  <h5>Sign Beach: Personalized sign language learning at scale </h5>
+                  <p class="mb-4">
+                    <b>Grant type:</b> <a href="https://rdt.uva.nl/" target="_blank">UvA Responsible Digital Transformations </a><br>
+                    <b>Team:</b> Floris Roelofsen, Beyza Sümer, Abe Hofman, Annika Schiefner <br>
+                    <b>Project partner:</b> Prowise Learn <br>
+                    <b>Year:</b> 2023-2026 <br>
+                    <b>Summary:</b>
+                    In this project SignLab researchers and software developers at ProwiseLearn collaborate to develop the Sign Beach (Gebarenstrand), a selection of digital games for teaching Dutch Sign Language (Nederlandse Gebarentaal, NGT). The games are integrated into Prowise Learn's Taalzee (Language Sea) learning platform used across primary schools in the Netherlands. In these games, children learn more than a thousand NGT signs in a playful, adaptive way, while we simultaneously collect large-scale data on how they learn signs. The project creates new research infrastructure for studying sign language acquisition in real-world classrooms and uses these insights to improve sign language learning materials. By making NGT visible and accessible in mainstream education, SignBeach also aims to reduce the communication barrier between deaf and hearing children.
+                    </p>
+                </div>
+              </div>
+
+              <!-- Column for project 2 -->
+              <div class="col-12 col-md order-2">
+                <!-- <div class="project-text pb-1 w-100 text-left textDIV">
+                  <h5>When early vocabulary is acquired late: Effects of iconicity and gestures on vocabulary development in signing children </h5>
+                  <p class="mb-4">
+                    <b>Grant type:</b> <a href="https://www.nwo.nl/en/news/60-promising-research-projects-launched-open-competition-ssh-xs-funding" target="_blank">NWO OC-SSH-XS grant</a><br>
+                    <b>PI:</b> Beyza Sümer <br>
+                    <b>Year:</b> 2023-2024 <br>
+                    <b>Summary:</b>
+                    It is widely assumed that all children receive language input when they are born, and their vocabulary development starts early. However, this is not true for deaf children born into families with no signers. They receive accessible language input when they meet other signers, but this might happen late in their lives. Thus, their vocabulary development starts late. We do not know the initial stages of their vocabulary development and which factors modulate their learning. To fill this gap in existing research, this project, for the first time, proposes to explore these stages and factors by focusing on these children.  
+                  </p>
+                </div> -->
+              </div>
+            </div>
+
+            <!-- Challenge Row set of two projects-->
+            <div class="row align-items-start mb-4 mb-md">
+              <!-- Column for project 1 -->
+              <div class="col-12 col-md order-1">
+                <div class="project-text pb-1 w-100 text-left textDIV">
                   <h5>Adaptive, Efficient Collection of Sign Language Data </h5>
                   <p class="mb-4">
                     <b>Grant type:</b> <a href="https://research.google/outreach/air-program/" target="_blank">Google Award for Inclusion Research </a><br>
