fix broken links index page

--- a/index.html
+++ b/index.html
@@ -56,14 +56,14 @@
             <!-- Banner -->
             <div class="project-text text-left pt-4 pb-2 bg-warning border rounded">
               <p>
-                Gebruik je zelf regelmatig NGT en zou je eens mee willen doen aan ons onderzoek of op een andere manier betrokken willen zijn? Kijk dan <b><a href="https://www.signlab-amsterdam.nl/evenementen.html">hier</a></b>. Of klik <b><a href="https://www.signlab-amsterdam.nl/onderzoek.html">hier</a></b> voor samenvattingen van ons onderzoek in NGT.
+                Gebruik je zelf regelmatig NGT en zou je eens mee willen doen aan ons onderzoek of op een andere manier betrokken willen zijn? Kijk dan <b><a href="https://www.signlab-amsterdam.nl/voor-ngt-evenementen.html">hier</a></b>. Of klik <b><a href="https://www.signlab-amsterdam.nl/voor-ngt-onderzoek.html">hier</a></b> voor samenvattingen van ons onderzoek in NGT.
               </p>
             </div>
 
             <!-- Banner -->
             <div class="project-text text-left pt-4 pb-2 bg-warning border rounded">
               <p>
-                We're looking for a new colleague! Click on <b><a href="https://www.signlab-amsterdam.nl/evenementen.html">this link</a></b> to view the vacancy for "Research assistant in Designing an AR Remote Sign Language Interpreting Service".
+                We're looking for a new colleague! Click on <b><a href="https://werkenbij.uva.nl/en/vacancies/research-assistant-in-designing-an-ar-remote-sign-language-interpreting-service-netherlands-14690">this link</a></b> to view the vacancy for "Research assistant in Designing an AR Remote Sign Language Interpreting Service".
               </p>
             </div>
 
